<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:onClick="onSettings"
        android:text="@string/Settings"
        android:theme="@style/PrimaryButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/buttonQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:onClick="onQuestions"
        android:text="@string/Questions"
        android:theme="@style/PrimaryButton"
        app:layout_constraintBottom_toBottomOf="@id/buttonSettings"/>
    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:onClick="onStart"
        android:text="@string/Start"
        android:theme="@style/PrimaryButton"
        app:layout_constraintBottom_toBottomOf="@id/buttonQuestions"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="By Tibor Peter Szabo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />


</androidx.constraintlayout.widget.ConstraintLayout>